nflk-live: tweet time now displayed as local time

--- a/nflk-live/nflk-live.html
+++ b/nflk-live/nflk-live.html
@@ -116,7 +116,7 @@
                 </td>
                 <td style="vertical-align:top">
                     <div id="right-column">
-                            <input type="text" id="searchterm" value="#fail" />
+                            <input type="text" id="searchterm" value="#sfn11" />
                             <input type="button" id="pausebutton" value="Pause" onclick="toggle_pause();"/>
                             <input type="button" id="clear" value="clear" onclick="cleartwts();"/>
                             <br /><span id="counter">0</span> tweets in queue.
