--- a/nflk-live/nflk-live.html
+++ b/nflk-live/nflk-live.html
@@ -100,7 +100,7 @@
         </style>
         <!--<link rel="stylesheet" type="text/css" href="tweet.js" />-->
         <script src="nflk-live-tweet.js"></script>
-        <script src="nflk-live.js"></script>
+        <script src="nflk-live-spiral.js"></script>
     </head> 
     <body lang="en-CA" dir="LTR">
         <img src="http://sciple.org/neuroflocks/NFLKS10_files/header_NFLKS_SFN10.png" width="632" height="68" border="0" >
