--- a/nflk-live/nflk-live.html
+++ b/nflk-live/nflk-live.html
@@ -11,12 +11,12 @@
     <body lang="en-CA" dir="LTR">
                     <div id="left-column">
                         <div id="twt-display"></div><br />
-                        <canvas align="center" id="swirl" height=500 width=500 onclick="cclick(event)">
+                        <canvas align="center" id="swirl" height=600 width=600 onclick="cclick(event)">
                         Unfortunately your browser does not support HTML5.... 
                         </canvas>
                     </div>
                     <div id="right-column">
-        <img src="http://sciple.org/neuroflocks/NFLKS10_files/header_NFLKS_SFN10.png" width="632" height="68" border="0" >
+        <img class="header" src="nflk-header.png" width=100%>
         <table>
             <tr>
                 <td>
