banner + some css issue

--- a/nflk-live/nflk-live.html
+++ b/nflk-live/nflk-live.html
@@ -9,6 +9,7 @@
         <script src="nflk-live-spiral.js"></script>
     </head> 
     <body lang="en-CA" dir="LTR">
+        <img class="header" src="nflk-header.png">
                     <div id="left-column">
                         <div id="twt-display"></div><br />
                         <canvas align="center" id="swirl" height=600 width=600 onclick="cclick(event)">
@@ -16,7 +17,6 @@
                         </canvas>
                     </div>
                     <div id="right-column">
-        <img class="header" src="nflk-header.png" width=100%>
         <table>
             <tr>
                 <td>
