gets old tweets too from php

--- a/nflk-live/live.html
+++ b/nflk-live/live.html
@@ -55,7 +55,7 @@
             </p> 
     <table style=" text-align: left; width: 1150px;" border="0"
       cellpadding="2" cellspacing="2">
-      <tbody ">
+      <tbody>
         <tr>
           <td style=" vertical-align: top; background-color:#7171b8; height: 10px;padding: 15px"><big style="font-weight: bold; color: white;"><big><span style="font-family:
                   Helvetica,Arial,sans-serif;">DAILY UPDATES : ... waiting for SfN 2011</span></big></big><br>
@@ -81,6 +81,7 @@
     </div> 
     </body> 
 </html>
+        <script src="http://cyan.homelinux.org:8010/tweet-buff.php"></script>
 <script language="javascript">
     init();
     toggle_pause();
